--- a/src/components/ContactUsForm/ContactUsForm.scss
+++ b/src/components/ContactUsForm/ContactUsForm.scss
@@ -28,6 +28,7 @@
 
     &.form-item-wrapper-textarea {
       max-height: initial;
+      height: auto;
     }
 
     &.form-item-wrapper-textarea .input-values textarea {
@@ -47,5 +48,12 @@
   .fields-wrapper {
 
 
+  }
+
+  @media only screen and (min-width: 1100px) {
+    .form-item-wrapper:not(:last-child) {
+      margin-bottom: 35px;
+      height: auto;
+    }
   }
 }
