--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -15,10 +15,12 @@
     text-decoration: underline;
     font-weight: bold;
     margin-bottom: 20px;
+    text-transform: uppercase;
   }
 
   .footer-link {
     @include hover-transition;
+    text-transform: uppercase;
 
     &:hover {
       color: $black-hover;
