--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -291,6 +291,22 @@
         }
       }
 
+      .nav-wrapper-gray {
+        &.rs {
+          .nav-item {
+            margin: 0 !important;
+          }
+        }
+
+        &.en {
+          .nav-item {
+            &:nth-child(2) {
+              margin: 0;
+            }
+          }
+        }
+      }
+
 
       .nav-item {
         padding: 30px 15px;
@@ -319,9 +335,12 @@
         &.rs {
           .nav-item {
 
+            &:first-child {
+              margin-left: -15px;
+            }
+
             &:nth-child(2) {
-              margin-left: 0px;
-              margin-right: 10px;
+              margin-left: -15px;
             }
           }
         }
@@ -330,26 +349,28 @@
       .lng-switch {
         margin-left: 10px;
       }
-      .nav-wrapper, .en {
-        .nav-item {
-          padding: 30px 13px;
+      .nav-wrapper {
+        &.en {
+          margin-left: -12px;
+         .nav-item {
 
-          &:first-child {
-            margin-left: -10px;
-          }
+           &:first-child {
+             margin-left: -10px;
+           }
 
-          &:nth-child(2){
-            margin-left: -5px;
-          }
+           &:nth-child(2){
+             margin-left: -20px;
+           }
 
-          &:nth-child(3) {
-            margin-left: 10px;
-          }
+           &:nth-child(3) {
+             margin-left: -10px;
+           }
 
-          &:nth-child(4) {
-            margin-left: 10px !important;
-          }
-        }
+           &:nth-child(4) {
+             margin-left: -5px !important;
+           }
+         }
+       }
       }
     }
   }
@@ -368,38 +389,48 @@
 
           .nav-item {
             &:first-child {
-              margin-left: -5px;
+              margin-left: -10px;
             }
 
             &:nth-child(2) {
-              margin-left: -8px;
+              margin-left: -27px;
             }
             &:nth-child(3) {
               margin-left: -20px;
             }
             &:nth-child(4) {
-              margin-left: -8px !important;
+              margin-left: -20px !important;
             }
+          }
+
+          .lng-switch {
+            margin-left: -5px;
           }
         }
       }
 
-      .nav-wrapper, .en {
-        .nav-item {
-          &:first-child {
-            margin-left: -12px;
+      .nav-wrapper {
+        &.en {
+          .nav-item {
+            &:first-child {
+              margin-left: -12px;
+            }
+
+            &:nth-child(2) {
+              margin-left: -25px;
+            }
+
+            &:nth-child(3) {
+              margin-left: -20px;
+            }
+
+            &:nth-child(4) {
+              margin-left: -10px !important;
+            }
           }
 
-          &:nth-child(2) {
-            margin-left: -12px;
-          }
-
-          &:nth-child(3) {
-            margin-left: -3px;
-          }
-
-          &:nth-child(4) {
-            margin-left: 0px !important;
+          .lng-switch {
+            margin-left: -5px;
           }
         }
       }
@@ -415,33 +446,40 @@
         .nav-wrapper {
           &.rs {
             .nav-item {
+              font-size: 12px;
 
               &:nth-child(2){
-                margin-left: -12px;
+                margin-left: -30px;
               }
               &:nth-child(3){
                 margin-left: -25px;
               }
               &:nth-child(4){
-                margin-left: -10px !important;
+                margin-left: -25px !important;
               }
             }
           }
         }
-        .nav-wrapper, .en {
-          .nav-item {
-            font-size: 12px;
+        .nav-wrapper {
+          &.en {
+            .nav-item {
+              font-size: 12px;
 
-            &:nth-child(2){
-              margin-left: -15px;
-            }
+              &:first-child {
+                margin-left: -5px;
+              }
 
-            &:nth-child(3){
-              margin-left: -9px;
-            }
+              &:nth-child(2){
+                margin-left: -35px;
+              }
 
-            &:nth-child(4){
-              margin-left: -9px !important;
+              &:nth-child(3){
+                margin-left: -20px;
+              }
+
+              &:nth-child(4){
+                margin-left: -23px !important;
+              }
             }
           }
         }
