--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -187,7 +187,7 @@
         justify-content: space-between;
         max-width: 30%;
         width: 100%;
-        margin: 0 100px;
+        margin: 0 70px;
       }
 
 
@@ -562,7 +562,29 @@
             .line-wrapper {
               display: none;
             }
+            &.rs, &.en {
+              .nav-item {
+                font-size: 17px;
+                padding: 0;
+                margin-bottom: 70px !important;
 
+                &:first-child {
+                  margin: 0;
+                }
+
+                &:nth-child(2) {
+                  margin: 0;
+                }
+
+                &:nth-child(3) {
+                  margin: 0;
+                }
+
+                &:nth-child(4) {
+                  margin: 0 !important;
+                }
+              }
+            }
             .nav-item {
               color: $black;
               border: 0;
@@ -583,7 +605,7 @@
             }
 
           .lng-switch {
-            margin-left: 0;
+            margin-left: 0 !important;
             margin-top: 50px;
           }
         }
