--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -87,6 +87,8 @@
         max-width: 237px;
         line-height: 150%;
         font-size: $font-size-small-regular;
+        text-align: justify;
+        align-self: center;
 
         &:first-child {
           max-width: 260px;
@@ -123,6 +125,7 @@
           .text {
             max-width: 370px;
             line-height: 150%;
+            text-align: justify;
           }
 
           .mid-right {
@@ -131,6 +134,7 @@
             justify-content: space-between;
             max-width: 294px;
             width: 100%;
+            margin-left: 7px;
 
             .button-wrapper {
               display: flex;
@@ -181,9 +185,11 @@
 
         .content {
           display: flex;
+          justify-content: center;
+          height: 100%;
 
           .long-line {
-            height: 661px;
+            height: 100%;
             width: 0;
             border: 1px solid $gray;
           }
@@ -326,6 +332,7 @@
               max-width: 383px;
               font-size: $font-size-small-regular;
               line-height: 150%;
+              text-align: justify;
             }
 
             .right-button {
@@ -338,6 +345,7 @@
                 margin-bottom: 50px;
                 max-height: 215px;
                 height: 100%;
+                text-align: justify;
               }
 
               .lines {
